made dynamic url which will coming from env

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@ href="https://fonts.googleapis.com/icon?family=Material+Icons"
 rel="stylesheet"
 />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YV"/>
-    <title>React App</title>
+    <title>Investor Platform</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
